--- a/index.html
+++ b/index.html
@@ -529,7 +529,13 @@
                                 <img src="statics/img/avatar-feedback-1.jpg" alt="" width="80" height="80" class="img-fluid" />
                             </div>
                             <div class="home_feedback_text">
-                                <div class="rating"></div>
+                                <div class="rating">
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                </div>
                                 <div class="home_feedback_sumb">
                                     Tôi đã thay đổi hoàn toàn phom dáng sau khi sử dụng các dịch vụ của công nghệ Ngũ Hành Dưỡng Sinh SKT tại đây. Quan trọng hơn là sức khỏe của tôi được cải thiện rất nhiều…
                                 </div>
@@ -543,7 +549,13 @@
                                 <img src="statics/img/avatar-feedback-2.jpg" alt="" width="80" height="80" class="img-fluid" />
                             </div>
                             <div class="home_feedback_text">
-                                <div class="rating"></div>
+                                <div class="rating">
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                </div>
                                 <div class="home_feedback_sumb">
                                     Tôi rất hài lòng về vóc dáng của mình. Từ 85kg xuống còn 58kg đó là điều hạnh phúc nhất mà tôi có. Cảm ơn Ngũ Hành Dưỡng Sinh Viện đã chăm sóc rất nhiệt tình và chu đáo.
                                 </div>
@@ -557,7 +569,13 @@
                                 <img src="statics/img/avatar-feedback-3.jpg" alt="" width="80" height="80" class="img-fluid" />
                             </div>
                             <div class="home_feedback_text">
-                                <div class="rating"></div>
+                                <div class="rating">
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                </div>
                                 <div class="home_feedback_sumb">
                                     Vô cùng biết ơn Ngũ hành đã cho tôi kiến thức giảm cân khoa học để vừa giảm được cân vừa có một cơ thể khỏe mạnh. Giờ đây vóc dáng của rôi rất thon gọn, nhẹ nhàng. Tôi mặc đồ đẹp hơn giúp tôi trở nên trẻ trung, tự tin và hạnh phúc hơn nhiều…
                                 </div>
@@ -571,7 +589,13 @@
                                 <img src="statics/img/avatar-feedback-4.png" alt="" width="80" height="80" class="img-fluid" />
                             </div>
                             <div class="home_feedback_text">
-                                <div class="rating"></div>
+                                <div class="rating">
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                </div>
                                 <div class="home_feedback_sumb">
                                     Không phải ngẫu nhiên tôi lựa chọn Ngũ hành là địa làm đẹp yêu thích nhiều năm qua. Không chỉ làm đẹp bên ngoài mà còn khỏe cả bên trong…Hơn nữa là những phương pháp ở Ngũ Hành khá đặc biệt: không xâm lấn, không tiêm chích, không thuốc vậy mà có thể giúp tôi sở hữu đường cong cơ thể uyển chuyển đẹp vô cùng…
                                 </div>
@@ -585,7 +609,13 @@
                                 <img src="statics/img/avatar-feedback-5.png" alt="" width="80" height="80" class="img-fluid" />
                             </div>
                             <div class="home_feedback_text">
-                                <div class="rating"></div>
+                                <div class="rating">
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                </div>
                                 <div class="home_feedback_sumb">
                                     Mỗi công nghệ trước khi áp dụng mang về Spa của mình, Hoài Thu đều tìm hiểu rất kỹ, và phải trải nghiệm trên bản thân đầu tiên. Giờ đây Thu đã thực sự tin, yêu, và say mê chia sẻ công nghệ tuyệt vời này của Ngũ Hành Dưỡng Sinh viện. Một công nghệ tuyệt vời, chăm sóc sức khỏe và làm đẹp từ trong ra ngoài. Điều quan trọng là hiệu quả và an toàn thật sự.  
                                 </div>
@@ -599,7 +629,13 @@
                                 <img src="statics/img/avatar-feedback-6.png" alt="" width="80" height="80" class="img-fluid" />
                             </div>
                             <div class="home_feedback_text">
-                                <div class="rating"></div>
+                                <div class="rating">
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                </div>
                                 <div class="home_feedback_sumb">
                                     Tôi cảm thấy may mắn và hạnh phúc khi biết đến Ngũ Hành, được hợp tác cùng lan tỏa những công nghệ dưỡng sinh tuyệt vời tại nơi đây.
                                 </div>
