update mobile - tim dai ly - contact

--- a/tim-dai-ly.html
+++ b/tim-dai-ly.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Liên Hệ - Ngũ Hành Group</title>
+    <title>Tìm đại lý - Ngũ Hành Group</title>
     <link rel="icon" href="statics/img/favicion.png" sizes="32x32">
     <link href="statics/css/style.css" rel="stylesheet" />
     <script src="statics/js/jquery.min.js?v=2.2.1" type="text/javascript"></script>
@@ -207,91 +207,182 @@
             </div>
         </div>
     </header>
-    <div class="bg_page">
-        <img src="statics/img/banner-2-1-1536x640.png" width="1020" height="425" class="img-fluid" alt="" /> 
-    </div>
-    <section class="contact_page">
+    <section class="find_agent_page">
         <div class="container">
-            <div class="row">
-                <div class="col-xl-8 col-lg-8 col-sm-12">
-                    <div class="map">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d658.2467456694516!2d105.80296493817082!3d20.999833885843277!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3135acbd31d8a49f%3A0x42c2f101936a6838!2zMTIgTmfDtSAxMDIgTmfhu6V5IE5oxrAgS29uIFR1bSwgVGhhbmggWHXDom4gVHJ1bmcsIFRoYW5oIFh1w6JuLCBIw6AgTuG7mWksIFZp4buHdCBOYW0!5e0!3m2!1svi!2s!4v1619492127085!5m2!1svi!2s" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-                    </div>
-                    <div class="row">
-                        <div class="col-xl-5 co-lg-5 col-sm-12">
-                            <div class="contact_info">
-                                <p>Liên hệ</p>
-                                <p>Hotline: 0988.679.777 ( Khách lẻ )&nbsp;</p>
-                                <p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;0972.19.5555 ( Đại lý )</p>
-                                <p>Email: nguhanhduongsinhvien@gmail.com</p>
+            <div class="title_bg_main">
+                <img src="statics/img/logo-title.png" alt="" width="74" height="74">
+                <h1>HỆ THỐNG ĐẠI LÝ NGŨ HÀNH</h1>
+                <img src="statics/img/border-bottom.png" alt="" width="212" height="6">
+            </div>
+            <h3>DANH SÁCH ĐỐI TÁC ĐẠI LÝ – CỔ ĐÔNG</h3>
+            <h4>ĐẠI LÝ CỔ ĐÔNG</h4>
+            <div class="find_agent_content">
+                <div class="row">
+                    <div class="col-xl-4 col-lg-4 col-sm-4">
+                        <div class="find_agent_item">
+                            <div class="find_agent_img">
+                                <img src="statics/img/Behapi-Spa.jpg" width="330" height="250" class="img-fluid" alt="" />
+                            </div>
+                            <div class="find_agent_text">
+                                <h4><em>Behapi Spa</em></h4>
+                                <p>——————————————————–</p>
+                                <p><strong>Địa chỉ:</strong> Số 239 Yên Xá, Tân Triều, Hà Nội</p>
+                                <p><strong>Hotlile:</strong> 0988 324 987 – 0983 691 895</p>
                             </div>
                         </div>
-                        <div class="col-xl-7 co-lg-7 col-sm-12">
-                            <form>
-                                <div class="form-title">Điền thông tin để chúng tôi hỗ trợ bạn nhé</div>
-                                <div class="form_body">
-                                    <div class="form-group">
-                                        <input size="40" type="text" placeholder="Họ và Tên: *" value="" />
-                                    </div>
-                                    <div class="form-group">
-                                        <input size="40" type="text" placeholder="Email: *" value="" />
-                                    </div>
-                                    <div class="form-group">
-                                        <input size="40" type="text" placeholder="Số điện thoại: *" value="" />
-                                    </div>
-                                    <div class="form-group">
-                                        <select>
-                                            <option value="">Bạn muốn được hỗ trợ về dịch vụ:*</option>
-                                            <option value="Nghệ thuật điêu khắc">Nghệ thuật điêu khắc</option>
-                                            <option value="Chăm sóc sức khỏe">Chăm sóc sức khỏe</option>
-                                            <option value="Điều chỉnh cân nặng">Điều chỉnh cân </option>
-                                        </select>
-                                    </div>
-                                    <div class="form-group">
-                                        <input size="40" type="text" placeholder="Tiêu đề" value="" />
-                                    </div>
-                                    <div class="form-group">
-                                        <textarea cols="40" rows="10" type="text" placeholder="Số điện thoại: *" value=""></textarea>
-                                    </div>
-                                    <div class="form-group">
-                                        <button type="submit">Gửi</button>
-                                    </div>
-                                    <div class="form-hotline">
-                                        <p>Liên hệ: 0972.19.5555</p>
-                                    </div>
-                                </div>
-                            </form>
+                    </div>
+                    <div class="col-xl-4 col-lg-4 col-sm-4">
+                        <div class="find_agent_item">
+                            <div class="find_agent_img">
+                                <img src="statics/img/z2457138279714_e1bce5c69300cd49f6e0ec9cdfaf1ff0.jpg" width="330" height="250" class="img-fluid" alt="" />
+                            </div>
+                            <div class="find_agent_text">
+                                <h4><em>Thiên Tâm Spa</em></h4>
+                                <p>——————————————————–</p>
+                                <p><strong>Địa chỉ:</strong> Số 34 Hoàng Văn Thụ, TP. Bắc Giang</p>
+                                <p><strong>Hotlile:</strong> 0989 229 911 – 0981 365 999</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-4 col-lg-4 col-sm-4">
+                        <div class="find_agent_item">
+                            <div class="find_agent_img">
+                                <img src="statics/img/z2298896155819_37b54774efa9bb070b5ce7a8a919ddee.jpg" width="330" height="250" class="img-fluid" alt="" />
+                            </div>
+                            <div class="find_agent_text">
+                                <h4><em>Nhi My Spa</em></h4>
+                                <p>——————————————————–</p>
+                                <p><strong>Địa chỉ:</strong> 23 Vũ Hồng Phô, Biên Hòa, Đồng Nai</p>
+                                <p><strong>Hotlile:</strong> 0964 767 756</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-4 col-lg-4 col-sm-4">
+                        <div class="find_agent_item">
+                            <div class="find_agent_img">
+                                <img src="statics/img/z2298982012285_c5431d4ceadd06abd8836fd54ab50c2e-1536x2048.jpg" width="330" height="250" class="img-fluid" alt="" />
+                            </div>
+                            <div class="find_agent_text">
+                                <h4><em>Camellia’s Spa</em></h4>
+                                <p>——————————————————–</p>
+                                <p><strong>Địa chỉ:</strong> Số 66A Lê Lợi, TT Khe Sanh, Quảng Trị</p>
+                                <p><strong>Hotlile:</strong> 0913 575 278</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-4 col-lg-4 col-sm-4">
+                        <div class="find_agent_item">
+                            <div class="find_agent_img">
+                                <img src="statics/img/z2457251793404_74f98384b9739cda5e0401c50a99e575.jpg" width="330" height="250" class="img-fluid" alt="" />
+                            </div>
+                            <div class="find_agent_text">
+                                <h4><em>An Lạc Dưỡng Sinh</em></h4>
+                                <p>——————————————————–</p>
+                                <p><strong>Địa chỉ:</strong> Số 37 Nguyên Khuê, Đông Anh, Hà Nội</p>
+                                <p><strong>Hotlile:</strong> 0879 673 666 – 0869 852 968</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-4 col-lg-4 col-sm-4">
+                        <div class="find_agent_item">
+                            <div class="find_agent_img">
+                                <img src="statics/img/z2298982012285_c5431d4ceadd06abd8836fd54ab50c2e-1536x2048.jpg" width="330" height="250" class="img-fluid" alt="" />
+                            </div>
+                            <div class="find_agent_text">
+                                <h4><em>Camellia’s Spa</em></h4>
+                                <p>——————————————————–</p>
+                                <p><strong>Địa chỉ:</strong> Số 66A Lê Lợi, TT Khe Sanh, Quảng Trị</p>
+                                <p><strong>Hotlile:</strong> 0913 575 278</p>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-4 col-lg-4 col-sm-12">
-                    <div class="block_search">
-                        <form>
-                            <input type="search" class="search-field" name="s" value="" id="s" placeholder="Tìm kiếm…" autocomplete="off">
-                            <button type="submit">
-                                <i class="fa-sharp fa-regular fa-magnifying-glass"></i>
-                            </button>
-                        </form>
+            </div>
+            <h4>ĐẠI LÝ XUẤT SẮC</h4>
+            <div class="find_agent_content">
+                <div class="row">
+                    <div class="col-xl-4 col-lg-4 col-sm-4">
+                        <div class="find_agent_item">
+                            <div class="find_agent_img">
+                                <img src="statics/img/5D3L8391-1536x1024.jpg" width="330" height="250" class="img-fluid" alt="" />
+                            </div>
+                            <div class="find_agent_text">
+                                <h4><em>Behapi Spa</em></h4>
+                                <p>——————————————————–</p>
+                                <p><strong>Địa chỉ:</strong> Số 239 Yên Xá, Tân Triều, Hà Nội</p>
+                                <p><strong>Hotlile:</strong> 0988 324 987 – 0983 691 895</p>
+                            </div>
+                        </div>
                     </div>
-                    <div class="block_tag">
-                        <div class="block_title">Tag</div>
-                        <div class="tagcloud"><a href="tag/cham-soc-suc-khoe-chu-dong/" class="tag-cloud-link tag-link-86 tag-link-position-1" aria-label="chăm sóc sức khỏe chủ động (1 mục)">chăm sóc sức khỏe chủ động</a>
-                            <a href="tag/cham-soc-tu-goc-re/" class="tag-cloud-link tag-link-89 tag-link-position-2" aria-label="chăm sóc từ gốc rễ (1 mục)">chăm sóc từ gốc rễ</a>
-                            <a href="tag/giam-beo/" class="tag-cloud-link tag-link-93 tag-link-position-3" aria-label="giảm béo (2 mục)">giảm béo</a>
-                            <a href="tag/giam-beo-duong-sinh/" class="tag-cloud-link tag-link-94 tag-link-position-4" aria-label="giảm béo dưỡng sinh (2 mục)">giảm béo dưỡng sinh</a>
-                            <a href="tag/giam-beo-tan-goc/" class="tag-cloud-link tag-link-95 tag-link-position-5" aria-label="giảm béo tận gốc (2 mục)">giảm béo tận gốc</a>
-                            <a href="tag/giam-can/" class="tag-cloud-link tag-link-92 tag-link-position-6" aria-label="Giảm cân (1 mục)">Giảm cân</a>
-                            <a href="tag/giam-can-an-toan/" class="tag-cloud-link tag-link-100 tag-link-position-7" aria-label="giảm cân an toàn (1 mục)">giảm cân an toàn</a>
-                            <a href="tag/giam-can-khoa-khoc/" class="tag-cloud-link tag-link-101 tag-link-position-8" aria-label="giảm cân khoa khọc. (1 mục)">giảm cân khoa khọc.</a>
-                            <a href="tag/khoe-ben-trong-dep-ben-ngoai/" class="tag-cloud-link tag-link-87 tag-link-position-9" aria-label="khỏe bên trong đẹp bên ngoài (1 mục)">khỏe bên trong đẹp bên ngoài</a>
-                            <a href="tag/mun/" class="tag-cloud-link tag-link-88 tag-link-position-10" aria-label="mụn (1 mục)">mụn</a>
-                            <a href="tag/nhan-tuong-hoc/" class="tag-cloud-link tag-link-82 tag-link-position-11" aria-label="nhân tướng học (1 mục)">nhân tướng học</a>
-                            <a href="tag/nhin-mat-doan-benh/" class="tag-cloud-link tag-link-83 tag-link-position-12" aria-label="nhìn mặt đoán bệnh (1 mục)">nhìn mặt đoán bệnh</a>
-                            <a href="tag/se-khit-vung-kin/" class="tag-cloud-link tag-link-98 tag-link-position-13" aria-label="se khít vùng kín (1 mục)">se khít vùng kín</a>
-                            <a href="tag/suc-khoe/" class="tag-cloud-link tag-link-84 tag-link-position-14" aria-label="sức khỏe (1 mục)">sức khỏe</a>
-                            <a href="tag/suc-khoe-dinh-duong/" class="tag-cloud-link tag-link-85 tag-link-position-15" aria-label="sức khỏe dinh dưỡng (1 mục)">sức khỏe dinh dưỡng</a>
-                            <a href="tag/tre-hoa-se-khit-vung-kin/" class="tag-cloud-link tag-link-97 tag-link-position-16" aria-label="trẻ hóa se khít vùng kín (1 mục)">trẻ hóa se khít vùng kín</a>
-                            <a href="tag/dau-rat-vung-kin/" class="tag-cloud-link tag-link-99 tag-link-position-17" aria-label="đau rát vùng kín (1 mục)">đau rát vùng kín</a></div>
+                    <div class="col-xl-4 col-lg-4 col-sm-4">
+                        <div class="find_agent_item">
+                            <div class="find_agent_img">
+                                <img src="statics/img/5D3L8391-1536x1024.jpg" width="330" height="250" class="img-fluid" alt="" />
+                            </div>
+                            <div class="find_agent_text">
+                                <h4><em>Thiên Tâm Spa</em></h4>
+                                <p>——————————————————–</p>
+                                <p><strong>Địa chỉ:</strong> Số 34 Hoàng Văn Thụ, TP. Bắc Giang</p>
+                                <p><strong>Hotlile:</strong> 0989 229 911 – 0981 365 999</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-4 col-lg-4 col-sm-4">
+                        <div class="find_agent_item">
+                            <div class="find_agent_img">
+                                <img src="statics/img/5D3L8391-1536x1024.jpg" width="330" height="250" class="img-fluid" alt="" />
+                            </div>
+                            <div class="find_agent_text">
+                                <h4><em>Nhi My Spa</em></h4>
+                                <p>——————————————————–</p>
+                                <p><strong>Địa chỉ:</strong> 23 Vũ Hồng Phô, Biên Hòa, Đồng Nai</p>
+                                <p><strong>Hotlile:</strong> 0964 767 756</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <h4>ĐẠI LÝ TIÊU BIỂU</h4>
+            <div class="find_agent_content">
+                <div class="row">
+                    <div class="col-xl-4 col-lg-4 col-sm-4">
+                        <div class="find_agent_item">
+                            <div class="find_agent_img">
+                                <img src="statics/img/z2033054031339_016e5dc2bd5d42585aafdd5dffb8d32b-1536x2048.jpg" width="330" height="250" class="img-fluid" alt="" />
+                            </div>
+                            <div class="find_agent_text">
+                                <h4><em>Hoàng Thảo Spa</em></h4>
+                                <p>——————————————————–</p>
+                                <p><strong>Địa chỉ:</strong> Bình Quyền, TT Bình Liêu, Quảng Ninh</p>
+                                <p><strong>Hotlile:</strong> 0967 983 683</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-4 col-lg-4 col-sm-4">
+                        <div class="find_agent_item">
+                            <div class="find_agent_img">
+                                <img src="statics/img/z2033053308532_8bf57b11d37f9e15e85025b0f4b464e9-1536x1024.jpg" width="330" height="250" class="img-fluid" alt="" />
+                            </div>
+                            <div class="find_agent_text">
+                                <h4><em>Suni Spa</em></h4>
+                                <p>——————————————————–</p>
+                                <p><strong>Địa chỉ:</strong> Số 39 Biệt Thự Hoa Viên, KĐT Đặng Xá, Gia Lâm, Hà Nội</p>
+                                <p><strong>Hotlile:</strong> 0972.19.5555</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-4 col-lg-4 col-sm-4">
+                        <div class="find_agent_item">
+                            <div class="find_agent_img">
+                                <img src="statics/img//z2033054154000_eeb6d67aad0ec2ff1fe98f2b45e02933-1365x2048.jpg" width="330" height="250" class="img-fluid" alt="" />
+                            </div>
+                            <div class="find_agent_text">
+                                <h4><em>Charmé Spa</em></h4>
+                                <p>——————————————————–</p>
+                                <p><strong>Địa chỉ:</strong> 278 Hoàng Liên, TP. Lào Cai</p>
+                                <p><strong>Hotlile:</strong> 0203 686 588 – 0982 839 839</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
