update chi tiết tin tức, hỏ đáp cùng chuyên gia

--- a/index.html
+++ b/index.html
@@ -83,22 +83,22 @@
                                     <button class="toggle"><i class="fa-solid fa-angle-down"></i></button>
                                     <ul class="sub-menu">
                                         <li>
-                                            <a href="" title="Người sáng lập">
+                                            <a href="ba-tran-thu-hang.html" title="Người sáng lập">
                                                 Người sáng lập
                                             </a>
                                         </li>
                                         <li>
-                                            <a href="" title="Cấu trúc tập đoàn">
+                                            <a href="ve-ban-lanh-dao.html" title="Cấu trúc tập đoàn">
                                                 Cấu trúc tập đoàn
                                             </a>
                                         </li>
                                         <li>
-                                            <a href="" title="Văn hoá doanh nghiệp">
+                                            <a href="ve-ngu-hanh-group.html" title="Văn hoá doanh nghiệp">
                                                 Văn hoá doanh nghiệp
                                             </a>
                                         </li>
                                         <li>
-                                            <a href="" title="Cơ sở vật chất">
+                                            <a href="ve-co-so-vat-chat.html" title="Cơ sở vật chất">
                                                 Cơ sở vật chất
                                             </a>
                                         </li>
@@ -161,15 +161,27 @@
                                         Đào tạo<br> công nghệ
                                     </a>
                                 </li>
-                                <li>
+                                <li class="menu-item-has-children">
                                     <a href="" title="Tin Tức Sự Kiện">
                                         Tin Tức <br> Sự Kiện
                                     </a>
+                                    <button class="toggle"><i class="fa-solid fa-angle-down"></i></button>
+                                    <ul class="sub-menu">
+                                        <li><a href="news.html">Tuyển dụng</a></li>
+                                        <li><a href="news.html">Sự kiện hội thảo</a></li>
+                                        <li><a href="news.html">Tin nội bộ</a></li>
+                                    </ul>
                                 </li>
-                                <li>
+                                <li class="menu-item-has-children">
                                     <a href="" title="Hỏi đáp cùng chuyên gia">
                                         Hỏi đáp <br> cùng chuyên gia
                                     </a>
+                                    <button class="toggle"><i class="fa-solid fa-angle-down"></i></button>
+                                    <ul class="sub-menu">
+                                        <li><a href="doi-ngu-chuyen-gia.html">Đội ngũ chuyên gia giàu kinh nghiệm tại Ngũ Hành dưỡng sinh viện</a></li>
+                                        <li><a href="tu-van-phau-thuat.html">Tư vấn dịch vụ</a></li>
+                                        <li><a href="#">Điêu khắc vùng vai gáy</a></li>
+                                    </ul>
                                 </li>
                                 <li>
                                     <a href="" title="Chăm sóc khách hàng">
